<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_testenviroment</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="logilab@todo.todo">logilab</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros_pkgs</depend>    <!--add more dependencies packages here-->
  <depend>teleop_twist_joy</depend> 
  <depend>joy</depend> 
  <depend>ros_gz</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
